<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.github.link2fun</groupId>
    <artifactId>kyou-solon</artifactId>
    <version>0.0.1</version>
  </parent>

  <artifactId>kyou-gen-plugin</artifactId>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.github.link2fun</groupId>
      <artifactId>kyou-support</artifactId>
    </dependency>
    <dependency>
      <groupId>com.easy-query</groupId>
      <artifactId>sql-solon-plugin</artifactId>
      <version>${easy-query.version}</version>
    </dependency>
    <dependency>
      <groupId>org.anyline</groupId>
      <artifactId>anyline-environment-solon-plugin</artifactId>
      <version>8.7.2-jdk17-20241022</version>
    </dependency>
    <dependency>
      <groupId>org.anyline</groupId>
      <artifactId>anyline-data-jdbc-mysql</artifactId>
      <version>8.7.2-jdk17-20241022</version>
    </dependency>

    <!--velocity代码生成使用模板 -->
    <dependency>
      <groupId>org.apache.velocity</groupId>
      <artifactId>velocity-engine-core</artifactId>
      <version>2.3</version>
    </dependency>

    <!--beetl 代码模板-->
    <dependency>
      <groupId>com.ibeetl</groupId>
      <artifactId>beetl</artifactId>
      <version>3.16.2.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>tencent</id>
      <url>https://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
</project>